@@ -1,0 +1,43 @@
+---
+title: "Tint Is Not Tufte"
+subtitle: "An implementation in R Markdown"
+author: "JJ Allaire, Yihui Xie, Dirk Eddelbuettel"
+date: "`r Sys.Date()`"
+output:
+  tint::tintHtml: 
+     self_contained: TRUE
+---
+
+```{r setup, include=FALSE}
+library(tint)
+# invalidate cache when the tufte version changes
+knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('tint'))
+options(htmltools.dir.version = FALSE)
+```
+
+# Before We Get Started...
+
+[tint](http://github.com/eddelbuettel/tint) is straightforward mix of the (html part of the) excellent
+[tufte](https://github.com/rstudio/tufte) package by JJ and Yihui, mixed with the
+[Roboto](https://fonts.google.com/specimen/Roboto) font use and color scheme
+proposed by [envisioned css](http://nogginfuel.com/envisioned-css/) plus minor style changes 
+such as removal of _italics_---but otherwise true to the wonderful
+[tufte](https://github.com/rstudio/tufte) package for R---all baked together into a
+small package providing another template. 
+
+We support _italic_ aka *em* and **strong** annotations for text, as well as `code` snippets.
+
+The package name is a standard package naming recursion: _tint is not tufte_.
+
+## Margin examples
+
+A figure.
+
+```{marginfigure}
+We know from _the first fundamental theorem of calculus_ that for $x$ in $[a, b]$:
+$$\frac{d}{dx}\left( \int_{a}^{x} f(u)\,du\right)=f(x).$$
+```
+
+A note.^[This is a sidenote that was entered using a footnote.]
+
+Another note. `r margin_note("Some more text.")`
